--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js",
     "lint": "eslint",
     "migration:generate": "sequelize-cli migration:generate --name",
-    "migration:run": "sequelize-cli db:migrate",
+    "migration:run": "sequelize-cli db:migrate --debug",
     "migration:revert": "sequelize-cli db:migrate:undo",
     "migration:delete": "sequelize-cli db:migrate:undo:all"
   },
